[metadata]
name = raspberrypi_rc_car_packages
version = file: VERSION.txt
author = Alex Molnár
author_email = qbbwwd@inf.elte.hu
description = Software of Raspberry Pi RC Car
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alex-molnar/rc_controller_software
project_urls =
    Bug Tracker = https://github.com/alex-molnar/rc_controller_software/issues
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src